clean unused code

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@radix-ui/react-tooltip": "^1.0.6",
     "ai": "^2.2.25",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "framer-motion": "^10.16.5",
+    "nanoid": "^5.0.3",
     "next": "14.0.3",
     "openai": "^4.20.0",
     "react": "^18",
@@ -40,6 +42,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.10",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
