--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.3",
-    "react-markdown": "^9.0.1",
+    "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.3",
-    "remark-gfm": "^4.0.0",
-    "remark-math": "^6.0.0",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -50,6 +51,7 @@
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
